[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.8.5"
csv = "1.3.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
